fixed link jumping

--- a/static/style.css
+++ b/static/style.css
@@ -10,7 +10,7 @@ body{
     text-align: center;
     padding:14px 14px;
     text-decoration:none;
-    font-size:24px;
+    font-size:30px;
     font-family:'Amatic SC';    
 
 }
